MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Previous_Business_Process_Steps_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Business_Process_Steps_Name__c</fullName>
    <formula>Previous_Business_Process_Step__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Business Process Step Name</label>
    <type>Text</type>
</CustomField>