MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Process_Comment__c.field-meta.xml
<CustomField>
    <fullName>Process_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Process Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>