MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Process_Flow__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Flow</label>
    <referenceTo>Process_Flow__c</referenceTo>
    <relationshipLabel>Business Processes</relationshipLabel>
    <relationshipName>Business_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>