MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Process_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Process_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Process Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>