MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/QA_Desnagging_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Desnagging_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QA Desnagging Date</label>
    <type>Date</type>
</CustomField>