MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/QA_Snag_Executive__c.field-meta.xml
<CustomField>
    <fullName>QA_Snag_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Snag Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>