MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/QA_Snagging_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Snagging_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QA Snagging Date</label>
    <type>Date</type>
</CustomField>