MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejection Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled booking</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>File note under process</fullName>
            </value>
            <value>
                <fullName>Forfeited</fullName>
            </value>
            <value>
                <fullName>Legal case</fullName>
            </value>
            <value>
                <fullName>Management case</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>On hold, promised to pay</fullName>
            </value>
            <value>
                <fullName>Ownership change</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>PR raised</fullName>
            </value>
            <value>
                <fullName>Reallocation</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>