MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Stop_Email_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Stop_Email_To_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Email To Customer</label>
    <type>Checkbox</type>
</CustomField>