MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Ownership Change</fullName>
            </value>
            <value>
                <fullName>Name Addition And Deletion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>