MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addition</fullName>
            </value>
            <value>
                <fullName>Deletion</fullName>
            </value>
            <value>
                <fullName>Addition And Deletion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>