MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Sub_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Text__c</fullName>
    <formula>TEXT(Sub_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Type Text</label>
    <type>Text</type>
</CustomField>