MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subcategory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>