MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/TAT__c.field-meta.xml
<CustomField>
    <fullName>TAT__c</fullName>
    <label>TAT</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>