MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Termination_letter_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_letter_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Termination letter Sent Date</label>
    <type>DateTime</type>
</CustomField>