MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Total_Time_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_In_Hours__c</fullName>
    <label>Total Time In Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>