MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Ownership Change</fullName>
            </value>
            <value>
                <fullName>Name Addition And Deletion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>