MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/recordTypes/Clone_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Clone_Opportunity</fullName>
    <active>true</active>
    <label>Clone Opportunity</label>
</RecordType>