MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/recordTypes/Cost_Approval.recordType-meta.xml
<RecordType>
    <fullName>Cost_Approval</fullName>
    <active>true</active>
    <label>Cost Approval</label>
</RecordType>