MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/recordTypes/expo_evalution.recordType-meta.xml
<RecordType>
    <fullName>expo_evalution</fullName>
    <active>true</active>
    <label>expo evalution</label>
</RecordType>