MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/recordTypes/Mall_Stand.recordType-meta.xml
<RecordType>
    <fullName>Mall_Stand</fullName>
    <active>true</active>
    <label>Mall Stand</label>
</RecordType>