MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/recordTypes/Office_Branding.recordType-meta.xml
<RecordType>
    <fullName>Office_Branding</fullName>
    <active>true</active>
    <label>Office Branding</label>
</RecordType>