MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/validationRules/CustomerAgreedToPay_is_Mandatory_Default.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomerAgreedToPay_is_Mandatory_Default</fullName>
    <active>true</active>
    <errorConditionFormula>Current_Business_Process_Step__r.Name =&apos;Collections Customer Negotiations&apos; &amp;&amp; ISPICKVAL(D_T_Customer_Discussion_Outcome__c, &apos;Customer Agreed To Pay&apos;) &amp;&amp; ISBLANK(Customer_Agreed_Payment_Date__c)</errorConditionFormula>
    <errorMessage>Customer Agreed Payment Date is Mandatory when Customer Discussion Outcome is &quot;Customer Agreed to Pay&quot;</errorMessage>
</ValidationRule>