MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/validationRules/Default_Letter1_should_be_send.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Letter1_should_be_send</fullName>
    <active>true</active>
    <errorConditionFormula>Current_Step_Name__c=&apos;Send Default1 Notice&apos; &amp;&amp;  ISBLANK(Default_Letter1_Sent_Date__c) &amp;&amp;  ISPICKVAL(Current_Business_Process_Step__r.Status__c , &apos;Completed&apos;)</errorConditionFormula>
    <errorMessage>Default Letter 1 should be send Before completing Send to Default1 Notice Step</errorMessage>
</ValidationRule>