MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/listViews/Clash_Approval.listView-meta.xml
<ListView>
    <fullName>Clash_Approval</fullName>
    <columns>NAME</columns>
    <columns>Process_Flow__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>ramanand s</value>
    </filters>
    <label>Clash Approval</label>
</ListView>