MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/listViews/Default_Queue_Business_Process.listView-meta.xml
<ListView>
    <fullName>Default_Queue_Business_Process</fullName>
    <filterScope>Queue</filterScope>
    <label>Default Queue</label>
    <queue>Default_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>