MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/listViews/EP_Finance_Validation_Business_Process.listView-meta.xml
<ListView>
    <fullName>EP_Finance_Validation_Business_Process</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>contains</operation>
        <value>Employee</value>
    </filters>
    <label>EP Finance Validation</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>