MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/listViews/Handover_Selected_Units.listView-meta.xml
<ListView>
    <fullName>Handover_Selected_Units</fullName>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Current_Business_Process_Step__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Handover Units</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>contains</operation>
        <value>PT-002,Unit 1,ADM test1,milestonetestunit1,demounit1,demounit2,Unit 3,Unit232,Test-03,Test-Unit-009,titledeedunit2,titledeedmyunit1,PT-010,PT-020</value>
    </filters>
    <label>Handover - Selected Units</label>
</ListView>