MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/listViews/Hanover_Contractor_Business_Process.listView-meta.xml
<ListView>
    <fullName>Hanover_Contractor_Business_Process</fullName>
    <filterScope>Queue</filterScope>
    <label>Hanover Contractor</label>
    <queue>Hanover_Contractor</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>