MODON MRE BPDEV/force-app/main/default/objects/Business_Process__c/listViews/Installment_Verification_Queue_Business_Process.listView-meta.xml
<ListView>
    <fullName>Installment_Verification_Queue_Business_Process</fullName>
    <filterScope>Queue</filterScope>
    <label>Installment Verification Queue</label>
    <queue>Installment_Verification_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>